[workspace]
# Use the new resolver to prevent dev-deps and build-deps from enabling debugging or test features in production.
resolver = "2"
members = [
    "equity-client",
    "equity-consensus",
    "equity-core",
    "equity-p2p",
    "equity-storage",
    "equity-types",
    "testcrate",
]

[patch.crates-io]
