[workspace]
# Use the new resolver to prevent dev-deps and build-deps from enabling debugging or test features
# in production.
resolver = "2"
# note: there are scripts that need to be updated if new members are added
members = [
    "credentials",
    "equity_client",
    "equity_consensus",
    "equity_core",
    "equity_p2p",
    "equity_storage",
    "equity_types",
    "testcrate",
]

[patch.crates-io]
