[package]
name = "credentials"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
equity_types = { path = "../equity_types"}

ed25519-consensus = "2"
rand = "0.8"
sha2 = "0.10"
tokio = { version = "1.19", features = ["full"] }