[package]
name = "equity-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
equity-storage = { path = "../equity-storage" }
equity-types = { path = "../equity-types" }
hyper = "0.14"
tokio = { version = "1.18", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
