[package]
name = "equity-core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
equity-storage = { path = "../equity-storage" }
equity-types = { path = "../equity-types" }

async-trait = "0.1"
axum = "0.5"
borsh = "0.9"
hyper = "0.14"
mime = "0.3"
thiserror = "1.0"
tokio = { version = "1.19", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
