[package]
name = "equity_client"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "equity_client"
path = "src/lib/lib.rs"

[dependencies]
equity_types = { path = "../equity_types" }

anyhow = "1.0"
borsh = "0.9"
clap = { version = "3.1", features = ["derive"] }
futures = "0.3"
surf = { version = "2.3", default-features = false, features = ["h1-client-rustls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
