[package]
name = "equity_client"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "equity_client"
path = "src/lib/lib.rs"

[[bin]]
name = "equity_client"
path = "src/bin/main.rs"

[dependencies]
equity_types = { path = "../equity_types" }

borsh = "0.9"
clap = { version = "3.2", features = ["derive"] }
ron = "0.7"
serde = { version = "1.0", features = ["derive"] }
surf = { version = "2.3", default-features = false, features = ["h1-client-rustls"] }
thiserror = "1.0"
tokio = { version = "1.19", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
