[package]
name = "equity_client"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "equity_client"
path = "src/lib/lib.rs"

[[bin]]
name = "equity_client"
path = "src/bin/main.rs"

[dependencies]
equity_types = { path = "../equity_types" }

borsh = "0.9"
bytemuck = { version = "1.9", default-features = false }
clap = { version = "3.2", features = ["derive"] }
ed25519-dalek = { version = "1.0", features = ["serde"] }
# All the ed25519 crates have a problem with old rand_core versions, and I would unfortunately have
# to fork a lot of stuff if I wanted to fix it myself
old_rand_core = { package = "rand_core", version = "0.5", default-features = false }
rand = "0.8"
rand_xoshiro = { version = "0.6", default-features = false }
ron = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surf = { version = "2.3", default-features = false, features = ["h1-client-rustls"] }
thiserror = "1.0"
tokio = { version = "1.19", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
