[package]
name = "equity_client_ws"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "equity_client_ws"
path = "src/lib/lib.rs"

[[bin]]
name = "equity_client_ws"
path = "src/bin/main.rs"

[dependencies]
equity_types = { path = "../equity_types" }

borsh = "0.9"
bytemuck = { version = "1.9", default-features = false }
clap = { version = "3.2", features = ["derive"] }
ed25519-consensus = "2"
futures = "0.3"
# All the ed25519 crates have a problem with old rand_core versions, and I would unfortunately have
# to fork a lot of stuff if I wanted to fix it myself
old_rand_core = { package = "rand_core", version = "0.5", default-features = false }
rand = "0.8"
rand_xoshiro = { version = "0.6", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.19", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.17"
tracing = "0.1"
tracing-subscriber = "0.3"
