[package]
name = "equity_core"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "equity_core"
path = "src/lib/lib.rs"

[[bin]]
name = "equity_core"
path = "src/bin/main.rs"

[dependencies]
equity_storage = { path = "../equity_storage" }
equity_types = { path = "../equity_types" }

async-trait = "0.1"
axum = "0.5"
borsh = "0.9"
clap = { version = "3.2", features = ["derive"] }
hyper = "0.14"
mime = "0.3"
thiserror = "1.0"
tokio = { version = "1.19", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
