[package]
name = "equity_core"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "equity_core"
path = "src/lib/lib.rs"

[[bin]]
name = "equity_core"
path = "src/bin/main.rs"

[dependencies]
equity_storage = { path = "../equity_storage" }
equity_types = { path = "../equity_types" }
equity_consensus = { path = "../equity_consensus" }
equity_p2p = { path = "../equity_p2p"}
equity_client = { path = "../equity_client" }

async-trait = "0.1"
clap = { version = "3.2", features = ["derive"] }
ed25519-consensus = "2"
futures = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
hyper = "0.14"
mime = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.19", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.17"
tracing = "0.1"
tracing-subscriber = "0.3"


