[package]
name = "equity_types"
version = "0.1.0"
edition = "2021"
publish = false

# note: although there is a lot of message related stuff here, this crate should not depend on or
# reexport runtime or TLS level stuff, only data and serialization
[dependencies]
borsh = "0.9"
derive-alias = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
