[package]
name = "equity_types"
version = "0.1.0"
edition = "2021"
publish = false

# note: although there is a lot of message related stuff here, this crate should not depend on or
# reexport runtime or TLS level stuff, only data and serialization
[dependencies]
borsh = "0.9"
derive-alias = "0.1.0"
ed25519-consensus = "2"
hyper = "0.14"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
