[package]
name = "equity_types"
version = "0.1.0"
edition = "2021"
publish = false

# note: although there is a lot of message related stuff here, this crate should not depend on or
# reexport runtime or TLS level stuff, only data and serialization
[dependencies]
derive-alias = "0.1.0"
ed25519-consensus = "2"
futures = "0.3"
hyper = "0.14"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.19", features = ["full"] }
tungstenite = "0.17"
